@@ -61,7 +61,6 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import org.apache.http.HttpStatus;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.common.header.Header;
@@ -398,7 +397,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
-    List<File> limitedFilesList = filesList.stream().limit(1).collect(Collectors.toList());
+    List<File> limitedFilesList = filesList.stream().limit(1).toList();
 
     String stubUserId = UUID.randomUUID().toString();
     WireMock.stubFor(get(GET_USER_URL + stubUserId).willReturn(okJson(userResponse.toString())));
@@ -1666,7 +1665,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     String jsonFiles = TestUtil.readFileFromPath(FILES_PATH);
     List<File> filesList = new ObjectMapper().readValue(jsonFiles, new TypeReference<>() { });
 
-    requestDto.getFiles().addAll(filesList.stream().limit(1).collect(Collectors.toList()));
+    requestDto.getFiles().addAll(filesList.stream().limit(1).toList());
     requestDto.setUserId(okapiUserIdHeader);
     requestDto.setSourceType(InitJobExecutionsRqDto.SourceType.FILES);
     RestAssured.given()
@@ -2397,7 +2396,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
-    List<File> limitedFilesList = filesList.stream().limit(1).collect(Collectors.toList());
+    List<File> limitedFilesList = filesList.stream().limit(1).toList();
 
     String stubUserId = UUID.randomUUID().toString();
     WireMock.stubFor(get(GET_USER_URL + stubUserId).willReturn(okJson(userResponse.toString())));
@@ -2439,7 +2438,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
-    List<File> limitedFilesList = filesList.stream().limit(1).collect(Collectors.toList());
+    List<File> limitedFilesList = filesList.stream().limit(1).toList();
 
     String stubUserId = UUID.randomUUID().toString();
     WireMock.stubFor(get(GET_USER_URL + stubUserId).willReturn(okJson(userResponse.toString())));
